Changes to fig2dev
===============================================================================
Version 3.2
===============================================================================
Patchlevel 8c (Xxx 2021)

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Correct a typo causing incorrect eps import, ticket #137.

-------------------------------------
Patchlevel 8b (Aug 2021)

NEW FEATURES:
	o Detect the output language from the output file name.
	o On the command line, a minus (-) as input or output file name refers
	  to standard input or standard output.

BUGS FIXED:
	o Correct buffer overflows and segfaults, mainly due to maliciously
	  crafted input files, tickets #113-117, #122, #123, #125-#135.
	o With -Lepic -P, generate a complete tex file.
	o Correctly produce a gif if a transparent color is given, ticket #121.
	o Return with error if no space is left on the device. Ticket #101.

-------------------------------------
Patchlevel 8a (Mar 2021)

BUGS FIXED:
	o Allow closed splines with three points.
	o Fix build under Darwin.

-------------------------------------
Patchlevel 8 (Dec 2020)

NEW FEATURES:
	o Use deflate to embed image data into eps output, often substantially
	  reducing file size.
	o Embed pdf files into ps output by converting the pdf to eps.
	o Allow negative arrow widths. This might be useful for asymmetric arrow
	  tips, which can thus be mirrored around the corresponding line.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Reject negative text font sizes. Fixes ticket #86.
	o Allow fig files ending without previous eol character. Fixes #83, #84.
	o Accept text and ellipse angles only within -2*pi to 2*pi. Fixes #76.
	o Allow -1 as default TeX font, not only 0. Fixes #71, #75, #81.
	o Do not allow ASCII NUL anywhere in input. Fixes #65, #68, #73, #80.
	o Use getline() to improve input scanning.
	  Fixes tickets #58, #59, #61, #62, #67, #78, #79, #82.