@@ -36,30 +36,36 @@ AT_CHECK([fig2dev -Leps - out.eps <$srcdir/data/line.fig
 ],0)
 AT_CLEANUP
 
-AT_SETUP([Use "-" for stdout])
+AT_SETUP([use "-" for stdout])
 AT_KEYWORDS(diversions)
 AT_CHECK([fig2dev -Leps $srcdir/data/line.fig - >out.eps
 ],0)
 AT_CLEANUP
 
-AT_SETUP([Use "- -" for stdin and stdout])
+AT_SETUP([use "- -" for stdin and stdout])
 AT_KEYWORDS(diversions)
 AT_CHECK([fig2dev -Leps - - <$srcdir/data/line.fig >out.eps
 ],0)
 AT_CLEANUP
 
-AT_SETUP([Guess jpeg output format from output filename])
+AT_SETUP([guess jpeg output format from output filename])
 AT_KEYWORDS(read.c)
 AT_SKIP_IF([NO_GS])
 AT_CHECK([fig2dev $srcdir/data/line.fig line.jpg
 ],0)
 AT_CLEANUP
 
-AT_SETUP([Guess tiff output format from output filename])
+AT_SETUP([guess tiff output format from output filename])
 AT_KEYWORDS(read.c)
 AT_SKIP_IF([NO_GS || \
 	( ! pnmtotiff -version && ! convert -version &&  ! gm version)])
 AT_CHECK([fig2dev $srcdir/data/line.fig line.tif
+],0)
+AT_CLEANUP
+
+AT_SETUP([pass driver name to driver, ticket #139])
+AT_KEYWORDS(fig2dev.c epic)
+AT_CHECK([fig2dev $srcdir/data/line.fig line.eepic
 ],0)
 AT_CLEANUP
 
